--- a/package.json
+++ b/package.json
@@ -47,15 +47,17 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "core-js": "^3.2.1",
-    "jest": "^24.9.0",
+    "jest": "^26.6.3",
     "jest-localstorage-mock": "^2.4.0",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^26.5.4",
     "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.3",
+    "typescript": "^4.2.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.14.1"
+  }
 }
