--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2015",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */
     "module": "umd",                          /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
+    "moduleResolution": "node",               /* Specifies module resolution strategy: 'node' (Node) or 'classic' (TypeScript pre 1.6) */
     "declaration": true,                      /* Generates corresponding '.d.ts' file. */
     "emitDeclarationOnly": true,              /* Emit declarations only, babel emits js files */
     "outDir": "./dist",                       /* Redirect output structure to the directory. */
